tools/ncp-local-cluster/apps/control-plane-endpoints/namespaces.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Namespace
metadata:
  name: sis
---
apiVersion: v1
kind: Namespace
metadata:
  name: nvcf
---
apiVersion: v1
kind: Namespace
metadata:
  name: nats-system
