tools/ncp-local-cluster/apps/control-plane-endpoints/tcproute-nats.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: nats-control-plane
  namespace: nats-system
spec:
  parentRefs:
    - name: shared-gw
      namespace: envoy-gateway-system
      sectionName: nats
  rules:
    - backendRefs:
        - name: nats
          port: 4222
